扫码限制，清空数据
