# docs/swagger.yaml
@@ -19,6 +19,13 @@ definitions:
       username:
         type: string
     type: object
+  auth.LimitRequest:
+    properties:
+      limit:
+        type: integer
+    required:
+    - limit
+    type: object
   auth.SigninRequest:
     properties:
       password:
@@ -372,6 +379,30 @@ paths:
       summary: 更新密码
       tags:
       - 用户管理
+  /clearalldata:
+    post:
+      consumes:
+      - application/json
+      operationId: "012"
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.SuccessRes'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorRes'
+      summary: 清空所有数据
+      tags:
+      - 管理权限
   /historys:
     get:
       consumes:
@@ -488,6 +519,60 @@ paths:
       summary: 扫描二维码
       tags:
       - 二维码管理
+  /scanlimit:
+    get:
+      consumes:
+      - application/json
+      operationId: "013"
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.SuccessRes'
+            - properties:
+                data:
+                  type: integer
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorRes'
+      summary: 获取一日扫码次数
+      tags:
+      - 管理权限
+    post:
+      consumes:
+      - application/json
+      operationId: "013"
+      parameters:
+      - description: 登录类型
+        in: body
+        name: signup_info
+        required: true
+        schema:
+          $ref: '#/definitions/auth.LimitRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.SuccessRes'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorRes'
+      summary: 设置一日扫码限制
+      tags:
+      - 管理权限
   /signin:
     post:
       consumes:
